# Metis_Command

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Project_One_Phase_One_Workshop_Plan.md  README.md  ROADMAP.md  Workshop_1_Output_Draft_Statements - Copy.md  agent_bus.py  agent_models.py  agent_prompts.py  agent_roster.py  agent_spawner.py  agent_tools.py  api_bridge.py  artifacts.py  auth_engine.py  auth_local.py  autonomous_loop.py  bench_full.json  bench_warmup.json  brain_engine.py  brains.py  browser_runner.py  build_installer.ps1  checkpoints.py  claude-flow.config.json  cloud_sync.py  code_workspace.py  comms_link.py  comms_policy.py  concurrency.py  crew_engine.py  custom_tools.py  daily_tasks.py  dynamic_ui.py  hardware_scanner.py  hooks.py  identity_matrix.py  inbox.py  (+50 more)
.claude/: launch.json  memory.db  settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-children.json  daemon-state.json
.cursor/: hooks.json
.streamlit/: config.toml
.swarm/: model-router-state.json  schema.sql  state.json
desktop-ui/: README.md  next.config.ts  package-lock.json  package.json
docs/: AGENT_MASTER_PROMPT.md  BENCHMARK_REPORT.md  BRAND_AND_SUPPORT.md  CHANGELOG_V1_TO_V16.3.md  CLAUDE_AND_MASTER_PROMPTS.md  CLAUDE_FULL_UI_IMPLEMENTATION_PROMPT.md  CUSTOMER_SYSTEM_AND_STORE_SETUP.md  LANDING_COPY.md  PITCH_DECK.md  PRODUCT_DIRECTION.md  SECURITY_WHITEPAPER.md
frontend/: agents.html  analytics.html  app.html  automation-inbox.html  automations.html  browser.html  code.html  login.html  logo-test.html  manager.html  manifest.json  money.html  oauth_callback.html  people.html  plugins.html  setup.html  signup.html  splash.html  workflow.html
(+192 files in other folders)
