[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metis-command"
version = "0.44.0"
description = "Metis Command OS — Sovereign Agentic Desktop Environment"
authors = [
    { name="Metis Team" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies would go here, relying on requirements.txt for now
]

[project.scripts]
metis = "launch:main"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--durations=5",
]
markers = [
    "slow: mark a test as slow (skipped by default locally)",
    "integration: hits Ollama or the network",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "metis-env",
    "site/node_modules",
    "site/.next",
    "dist",
    "build",
    ".pytest_cache",
]

[tool.ruff.lint]
# Conservative set - quality gate without bikeshed.
select = ["E", "F", "W", "I", "B", "UP", "PL"]
ignore = [
    "E501",     # line length - leave to the formatter / human judgement
    "PLR2004",  # magic numbers in tests
    "PLR0913",  # "too many arguments" - data-driven APIs legitimately have many
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "B008",     # default call in argument - Streamlit session-state pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR", "E402", "B"]
"scripts/**/*" = ["PLR"]
"apply_reliability.py" = ["PLR", "E402"]
